# freecad.plot

./: .editorconfig  .gitignore  MANIFEST.in  README.md  package.xml  pyproject.toml  setup.py
.config/Tasks/: Release-Locales.sh  Update-Locales.sh
Resources/Locales/: Base.ts  jp.ts
freecad/plot/: CMakeLists.txt  Plot.py  PlotGui.py  Plot_rc.py  __init__.py  compile_resources.py  freecad_backend.py  init_gui.py  version.py
freecad/plot/Commands/: Axes.py  Grid.py  Labels.py  Legend.py  Positions.py  Save.py  Series.py  __init__.py
freecad/plot/Panels/: Axes.py  Labels.py  Positions.py  Save.py  Series.py  __init__.py
freecad/plot/PySide/: QtCore.py  QtGui.py  QtWidgets.py
freecad/plot/Resources/Locales/: jp.qm
freecad/plot/plotAxes/: TaskPanel.py  __init__.py
freecad/plot/plotLabels/: TaskPanel.py
freecad/plot/plotPositions/: TaskPanel.py
freecad/plot/plotSave/: TaskPanel.py  __init__.py
freecad/plot/plotSeries/: TaskPanel.py
freecad/plot/plotUtils/: Paths.py
freecad/plot/resources/: Plot.qrc  Plot_rc.py
freecad/plot/resources/translations/: Plot.ts  Plot_af.qm  Plot_af.ts  Plot_ar.qm  Plot_ar.ts  Plot_be.ts  Plot_bg.qm  Plot_bg.ts  Plot_ca.qm  Plot_ca.ts  Plot_cs.qm  Plot_cs.ts  Plot_da.qm  Plot_da.ts  Plot_de.qm  Plot_de.ts  Plot_el.qm  Plot_el.ts  Plot_en.qm  Plot_en.ts  Plot_es-AR.qm  Plot_es-AR.ts  Plot_es-ES.qm  Plot_es-ES.ts  Plot_eu.qm  Plot_eu.ts  Plot_fi.qm  Plot_fi.ts  Plot_fil.qm  Plot_fil.ts  Plot_fr.qm  Plot_fr.ts  Plot_gl.qm  Plot_gl.ts  Plot_hr.qm  Plot_hr.ts  Plot_hu.qm  Plot_hu.ts  Plot_id.qm  Plot_id.ts  (+48 more)
freecad/plot/resources/ui/: Positions.ui  Series.ui  TaskPanel_plotAxes.ui  TaskPanel_plotLabels.ui  TaskPanel_plotSave.ui
