<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">
  <name>Plot Workbench</name>
  <description>Some tools to manipulate the FreeCAD plots</description>
  <version>2024.10.23</version>
  <date>2024-10-23</date>
  <maintainer email="jlcercos@gmail.com">Jose Luis Cercós Pita</maintainer>
  <license file="LICENSE">LGPL-2.1-or-later</license>
  <url type="repository" branch="master">https://github.com/FreeCAD/freecad.plot</url>
  <url type="bugtracker">https://github.com/FreeCAD/freecad.pot/issues</url>
  <url type="documentation">https://wiki.freecad.org/Plot_Workbench</url>

  <icon>freecad/plot/resources/icons/Plot_Icon.svg</icon>

  <content>
    <workbench>
      <name>Plot Workbench</name>
      <classname>PlotWorkbench</classname>
      <subdirectory>./</subdirectory>
      <icon>freecad/plot/resources/icons/Plot_Icon.svg</icon>
      <depend>matplotlib</depend>
      <tag>plot</tag>
    </workbench>
  </content>

</package>
